--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <form id="contactForm" novalidate>
                 <div class="input-group">
                     <label for="name">Nome Completo</label>
-                    <input type="text" id="name" placeholder="Ex: Marcos Silva">
+                    <input type="text" id="name" placeholder="Ex: José Silva">
                     <div class="error-tooltip">
                         <span class="error-icon">!</span>
-                        <span class="error-message"></span> </div>
+                        <span class="error-message"></span>
+                    </div>
                 </div>
 
                 <div class="input-group">
@@ -34,12 +35,13 @@
                     <input type="email" id="email" placeholder="seu@email.com">
                     <div class="error-tooltip">
                         <span class="error-icon">!</span>
-                        <span class="error-message"></span> </div>
+                        <span class="error-message"></span>
+                    </div>
                 </div>
 
                 <div class="input-group">
                     <label for="message">Mensagem (Opcional)</label>
-                    <textarea id="message" rows="5" placeholder="Sua mensagem..."></textarea>
+                    <textarea id="message" rows="5" placeholder="Como podemos ajudar?"></textarea>
                 </div>
 
                 <button type="submit" id="submitBtn">Enviar Mensagem</button>
